--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "victor-hugo",
   "version": "1.0.0",
-  "description": "Victor Hugo is a Hugo boilerplate for creating truly epic websites!",
+  "description":
+    "Victor Hugo is a Hugo boilerplate for creating truly epic websites!",
   "main": "index.js",
   "scripts": {
     "hugo": "gulp hugo",
@@ -12,56 +13,47 @@
   },
   "author": "",
   "license": "MIT",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "babel-eslint": "^6.1.2",
     "babel-loader": "^7.0.0",
-    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
-    "babel-plugin-transform-class-properties": "^6.10.2",
-    "babel-plugin-transform-object-assign": "^6.8.0",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-env": "^1.6.1",
     "babel-register": "^6.11.6",
     "browser-sync": "^2.13.0",
     "css-loader": "^0.28.2",
-    "eslint": "^3.1.1",
-    "eslint-plugin-import": "^1.11.1",
+    "eslint": "^4.7.2",
+    "eslint-config-prettier": "^2.6.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-prettier": "^2.3.1",
     "exports-loader": "^0.6.3",
     "file-loader": "^0.11.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-less": "^3.3.2",
     "gulp-postcss": "^6.1.1",
     "gulp-util": "^3.0.7",
-    "hugo-bin": "^0.12.0",
+    "hugo-bin": "^0.16.0",
     "imports-loader": "^0.7.1",
     "postcss-cssnext": "^2.7.0",
     "postcss-import": "^10.0.0",
+    "prettier": "^1.7.0",
     "url-loader": "^0.5.7",
     "webpack": "^2.6.0",
     "whatwg-fetch": "^1.0.0"
   },
-  "devDependencies": {
-    "eslint": "^4.7.2",
-    "eslint-config-airbnb-base": "^12.0.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-prettier": "^2.3.1",
-    "gulp-less": "^3.3.2",
-    "hugo-bin": "^0.13.0",
-    "prettier": "^1.7.0"
-  },
   "babel": {
-    "presets": [
-      "es2015"
-    ],
-    "plugins": [
-      "syntax-object-rest-spread",
-      "transform-object-rest-spread"
-    ]
+    "presets": ["env"]
   },
   "eslintConfig": {
-    "extends": "airbnb-base",
-    "plugins": [
-      "prettier"
-    ],
+    "extends": "prettier",
+    "plugins": ["prettier", "import"],
+    "parserOptions": {
+      "ecmaVersion": 2016,
+      "sourceType": "module",
+      "ecmaFeatures": {
+        "jsx": true
+      }
+    },
     "rules": {
       "prettier/prettier": [
         "error",
