--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "main": "index.js",
   "scripts": {
     "hugo": "gulp hugo",
-    "build": "gulp build",
+    "gen-contents": "bash ./gen-nav.sh",
+    "clean-build": "rm -rf dist;",
+    "build": "export NODE_ENV=prod;gulp build;bash ./process-docs.sh",
     "build-preview": "gulp build-preview",
-    "start": "gulp server",
+    "start": "export NODE_ENV=development;gulp server",
     "lint": "eslint src"
   },
   "author": "",
@@ -20,25 +22,27 @@
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.11.6",
     "browser-sync": "^2.13.0",
-    "css-loader": "^0.28.2",
+    "css-loader": "^0.28.7",
     "eslint": "^4.7.2",
     "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-prettier": "^2.3.1",
     "exports-loader": "^0.6.3",
+    "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^0.11.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-less": "^3.3.2",
     "gulp-postcss": "^6.1.1",
     "gulp-util": "^3.0.7",
+    "html-webpack-plugin": "^2.30.1",
     "hugo-bin": "^0.16.0",
     "imports-loader": "^0.7.1",
     "postcss-cssnext": "^2.7.0",
     "postcss-import": "^10.0.0",
     "prettier": "^1.7.0",
     "url-loader": "^0.5.7",
-    "webpack": "^2.6.0",
+    "webpack": "^3.8.1",
     "whatwg-fetch": "^1.0.0"
   },
   "babel": {
