build: 更改构建先 gulp css 准备 dist/style.css 给 webpack entry app.js

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "hugo": "gulp hugo",
     "gen-contents": "bash ./gen-nav.sh",
     "clean-build": "rm -rf dist;",
-    "build": "export NODE_ENV=prod;gulp build;bash ./process-docs.sh",
+    "build": "export NODE_ENV=prod;gulp css;gulp build;bash ./process-docs.sh",
     "build-preview": "gulp build-preview",
     "start": "export NODE_ENV=development;gulp server",
     "lint": "eslint src"
