feat: add submodule for blog/weekly, and update blog-cn submodule branch to hugo-refactor

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,15 @@
 [submodule "content/blog-cn"]
 	path = content/blog-cn
 	url = git@github.com:pingcap/blog-cn.git
+  branch = hugo-refactor
 [submodule "content/meetup"]
 	path = content/meetup
 	url = https://github.com/pingcap/meetup
+[submodule "content/blog"]
+	path = content/blog
+	url = git@github.com:pingcap/blog.git
+	branch = hugo-refactor
+[submodule "content/weekly"]
+	path = content/weekly
+	url = git@github.com:pingcap/weekly.git
+	branch = hugo-refactor
