--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,8 @@ languageCode = "en-us"
 languageLang = "en"
 title = "My new Victor-Hugo site"
 preserveTaxonomyNames = true
+pluralizeListTitles = true
+enableEmoji = true
 # RSS, categories and tags disabled for an easy start
 # See configuration options for more details:
 # https://gohugo.io/getting-started/configuration/#toml-configuration
