update .gitmodules for docs/docs-cn meetup

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,11 @@
 [submodule "content/docs-cn"]
 	path = content/docs-cn
 	url = git@github.com:pingcap/docs-cn.git
+	branch = hugo-refactor
 [submodule "content/docs"]
 	path = content/docs
 	url = git@github.com:pingcap/docs.git
+	branch = hugo-refactor
 [submodule "content/blog-cn"]
 	path = content/blog-cn
 	url = git@github.com:pingcap/blog-cn.git
@@ -11,6 +13,7 @@
 [submodule "content/meetup"]
 	path = content/meetup
 	url = https://github.com/pingcap/meetup
+	branch = hugo-refactor
 [submodule "content/blog"]
 	path = content/blog
 	url = git@github.com:pingcap/blog.git
