--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "gen-contents": "bash ./gen-nav.sh",
     "clean-build": "rm -rf dist;",
     "build":
-      "git submodule update --remote;export NODE_ENV=prod;gulp css;gulp build;bash ./process-docs.sh",
+      "git submodule update --init --recursive --remote;export NODE_ENV=prod;gulp css;gulp build;bash ./process-docs.sh",
     "build-preview": "gulp build-preview",
     "start": "export NODE_ENV=development;gulp server",
     "lint": "eslint src"
