--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "gulp-postcss": "^6.1.1",
     "gulp-util": "^3.0.7",
     "html-webpack-plugin": "^2.30.1",
-    "hugo-bin": "^0.16.0",
+    "hugo-bin": "0.13.0",
     "imports-loader": "^0.7.1",
     "postcss-cssnext": "^2.7.0",
     "postcss-import": "^10.0.0",
