chore: upgrade hugo-bin version to v.20.2

--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "victor-hugo",
   "version": "1.0.0",
-  "description":
-    "Victor Hugo is a Hugo boilerplate for creating truly epic websites!",
+  "description": "Victor Hugo is a Hugo boilerplate for creating truly epic websites!",
   "main": "index.js",
   "scripts": {
     "hugo": "gulp hugo",
     "gen-contents": "bash ./gen-nav.sh",
     "clean-build": "rm -rf dist;",
-    "build":
-      "git submodule update --init --recursive --remote;bash ./gen-nav.sh;export NODE_ENV=prod;gulp css;gulp build;bash ./process-docs.sh",
+    "build": "git submodule update --init --recursive --remote;bash ./gen-nav.sh;export NODE_ENV=prod;gulp css;gulp build;bash ./process-docs.sh",
     "build-preview": "gulp build-preview",
     "start": "export NODE_ENV=development;gulp server",
     "lint": "eslint src"
@@ -37,7 +35,7 @@
     "gulp-postcss": "^6.1.1",
     "gulp-util": "^3.0.7",
     "html-webpack-plugin": "^2.30.1",
-    "hugo-bin": "0.13.0",
+    "hugo-bin": "^0.17.0",
     "imports-loader": "^0.7.1",
     "postcss-cssnext": "^2.7.0",
     "postcss-import": "^10.0.0",
@@ -47,11 +45,16 @@
     "whatwg-fetch": "^1.0.0"
   },
   "babel": {
-    "presets": ["env"]
+    "presets": [
+      "env"
+    ]
   },
   "eslintConfig": {
     "extends": "prettier",
-    "plugins": ["prettier", "import"],
+    "plugins": [
+      "prettier",
+      "import"
+    ],
     "parserOptions": {
       "ecmaVersion": 2016,
       "sourceType": "module",
