build: add rsync to transfer incremental diff to website nginx

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,8 @@ jobs:
     steps:
       - checkout
 
+      - run: sudo apt-get install -y rsync
+
       # Download and cache dependencies
       - restore_cache:
           keys:
@@ -39,7 +41,7 @@ jobs:
 
       - add_ssh_keys:
           fingerprints:
-            - "6a:a6:ac:e8:9e:ee:7d:ef:18:92:94:0b:b0:2c:34:82"
+            - "b8:b5:39:59:ff:7e:87:99:74:1d:6a:34:5a:3e:9c:53"
 
       # run tests!
       - run: npm run build
