polish:  update config.toml to disable path to lower

--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,8 @@ baseurl = "https://pingcap.com/"
 languageCode = "en-us"
 languageLang = "en"
 title = "My new Victor-Hugo site"
+# Do not make the url/path to lowercase
+disablePathToLower = true
 preserveTaxonomyNames = true
 pluralizeListTitles = true
 enableEmoji = true
