--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "html-webpack-plugin": "^2.30.1",
     "hugo-bin": "^0.17.0",
     "imports-loader": "^0.7.1",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "postcss-cssnext": "^2.7.0",
     "postcss-import": "^10.0.0",
     "prettier": "^1.7.0",
