build: change branch in .gitmodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "content/docs-cn"]
 	path = content/docs-cn
 	url = git@github.com:pingcap/docs-cn.git
-	branch = hugo-refactor
+	branch = master
 [submodule "content/docs"]
 	path = content/docs
 	url = git@github.com:pingcap/docs.git
-	branch = hugo-refactor
+	branch = master
 [submodule "content/blog-cn"]
 	path = content/blog-cn
 	url = git@github.com:pingcap/blog-cn.git
-  branch = hugo-refactor
+  branch = master
 [submodule "content/meetup"]
 	path = content/meetup
 	url = https://github.com/pingcap/meetup
