Polish/docs page height (#1)
* build: checkout new branch for preview and change branches for preview

* polish: change docs page min-height

* build: revert from preview branch

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseurl = "https://pingcap.com/"
 languageCode = "en-us"
 languageLang = "en"
-title = "My new Victor-Hugo site"
+title = "PingCAP Site"
 # Do not make the url/path to lowercase
 disablePathToLower = true
 preserveTaxonomyNames = true
