feat: add highlight style for code block in docs

--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,18 @@ disablePathToLower = true
 preserveTaxonomyNames = true
 pluralizeListTitles = true
 enableEmoji = true
+
+#Set to true to enable syntax highlighting in code fences with a language tag in markdown
+pygmentsCodefences = true
+# color-codes for highlighting derived from this style
+pygmentsStyle = "monokai"
+# true: use pygments-css or false: color-codes directly
+pygmentsUseClasses = false
+#Set to true to try to do syntax highlighting on code fenced blocks in markdown without a language tag
+pygmentsCodeFencesGuessSyntax = true
+#Set to true to use Pygments instead of the much faster Chroma
+# pygmentsUseClassic = false
+
 # RSS, categories and tags disabled for an easy start
 # See configuration options for more details:
 # https://gohugo.io/getting-started/configuration/#toml-configuration
