polish: update npm cmd for gen-contents

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "app.js",
   "scripts": {
     "hugo": "gulp hugo",
-    "gen-contents": "bash ./gen-nav.sh",
+    "gen-contents": "bash ./gen-sub-gitinfo.sh;bash ./gen-nav.sh",
     "clean-build": "rm -rf dist;",
     "build":
       "git submodule update --init --recursive --remote;bash ./gen-sub-gitinfo.sh;bash ./gen-nav.sh;export NODE_ENV=prod;gulp css;./build-check-err.sh",
