chore: add release notes to each docs-cn page

--- a/data/release.json
+++ b/data/release.json
@@ -3,10 +3,10 @@
   "announcement": {
     "en_part1": "Join the TiDB Community Slack channel",
     "en_part2": "to interact with the community!",
-    "cn": "TiDB DBA 认证考试全面启动，点此报名"
+    "cn": "TiDB 4.0 RC 版本全新发布，点此申请试用"
   },
   "link": {
     "en": "https://pingcap.com/tidbslack",
-    "cn": "http://pingcaptidb.mikecrm.com/27nKQYc"
+    "cn": "http://pingcaptidb.mikecrm.com/WywFDVX"
   }
 }
