--- a/data/release.json
+++ b/data/release.json
@@ -3,7 +3,7 @@
   "announcement": {
     "en_part1": "Join the TiDB Community Slack channel",
     "en_part2": "to interact with the community!",
-    "cn": "TiDB 4.0 RC 版本全新发布，点此申请试用"
+    "cn": "TiDB 4.0 RC 版本全新发布，欢迎点击试用垂询"
   },
   "link": {
     "en": "https://pingcap.com/tidbslack",
