chore: dynamic add js file to webpack entry (#533)

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "lint": "eslint src"
   },
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "glob": "^7.1.6"
+  },
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@babel/preset-env": "^7.11.5",
