CPT-265 feat: update meetup and events url

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,12 +6,12 @@
 	path = content/weekly
 	url = https://github.com/pingcap/weekly
 	shallowed = true
-[submodule "content/meetup"]
-	path = content/meetup
-	url = https://github.com/pingcap/meetup
-	shallowed = true
 [submodule "content/tidb-academy"]
 	path = content/tidb-academy
 	url = git@github.com:pingcap/private-tidb-academy.git
 	shallowed = true
-
+[submodule "content/archived/meetup"]
+	path = content/archived/meetup
+	url = https://github.com/tidb-incubator/meetup.git
+	shallowed = true
+	branch = CPT-265-migration
