--- a/package.json
+++ b/package.json
@@ -13,14 +13,11 @@
     "gen-content": "bash ./scripts/gen-sub-gitinfo.sh; bash ./scripts/gen-content.sh",
     "clean": "rimraf dist",
     "lint": "eslint src",
-    "server:reload": "pm2 reload pm2.config.js",
-    "server:start": "pm2 start pm2.config.js",
     "deploy": "shipit production deploy"
   },
   "license": "MIT",
   "dependencies": {
-    "glob": "^7.1.6",
-    "http-server": "^0.12.3"
+    "glob": "^7.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
