--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "git submodule sync; git submodule update --init --remote --recursive; npm run gen-content; export NODE_ENV=production; ./scripts/build-check-err.sh",
     "gen-content": "bash ./scripts/gen-sub-gitinfo.sh; bash ./scripts/gen-content.sh",
     "clean": "rimraf dist",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "deploy": "shipit production deploy"
   },
   "license": "MIT",
   "dependencies": {
@@ -36,6 +37,8 @@
     "less-plugin-autoprefix": "^2.0.0",
     "prettier": "^1.19.1",
     "rimraf": "^2.7.1",
+    "shipit-cli": "5.3.0",
+    "shipit-deploy": "5.3.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.42.0"
   }
